--- a/index.html
+++ b/index.html
@@ -1057,7 +1057,7 @@
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="busness insight 360" src="/assets/img/project1-financial analysis and reporting.webp" style="height: 100%; width: 100%" class="activator" />
+                <img alt="busness insight 360" src="/assets/img/busienss insight 360.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">Business Insight 360 <i
