--- a/index.html
+++ b/index.html
@@ -224,20 +224,17 @@
           </h2>
         </blockquote> -->        
         <p>
-          Welcome to my GitHub! I am a Financial Operations and Analytics Manager with a deep commitment to harnessing 
-          data to drive financial performance and strategic business decisions. With over 25 years in finance, transitioning 
-          from accounting roles to financial data analysis, my journey emphasizes the integration of deep domain knowledge
-          with advanced data analysis. Starting as an accountant and evolving into an accounts and finance manager, my focus
-          was on financial reporting and MIS, laying the groundwork for expertise in finance. In 2019, I shifted towards 
-          data analysis, specializing in the analysis of financial and business reports, leveraging tools like Excel, 
-          Power BI, Python, and SQL. This evolution highlights my commitment to blending finance expertise with analytical skills, 
-          continually updating my knowledge, especially in AI. My aim is to connect with professionals at the intersection of 
-          finance and technology, driving impactful contributions to our industry through shared expertise and innovation. 
-          My work focuses on transforming raw financial data into meaningful, actionable insights that empower organizations to 
-          achieve sustained growth. With extensive experience in both financial operations and data analytics, I bring a unique
-          blend of skills at the intersection of finance and data science. By applying advanced data-driven techniques, 
-          I uncover trends, enhance financial transparency, and guide data-informed strategies that strengthen business outcomes.
-          
+          Welcome to my GitHub! I am a Financial Operations and Analytics Manager with over 25 years of experience, 
+          specializing in transforming raw financial data into actionable insights that drive strategic business decisions
+          and sustained growth. My career began in accounting and evolved into financial management, focusing on financial 
+          reporting and MIS. In 2019, I transitioned to financial data analysis, integrating tools like Excel, Power BI, Python, and SQL
+          to analyze financial and business reports.
+        </p> 
+        <p>
+          This journey reflects my commitment to blending deep financial expertise with advanced analytical skills, enabling 
+          organizations to enhance transparency, uncover trends, and implement data-driven strategies. Passionate about innovation 
+          and continuous learning, particularly in AI, I aim to connect with professionals at the intersection of finance and technology
+           to share expertise and contribute to impactful advancements in our industry.
         </p>
          
         <!-- <p>
