--- a/index.html
+++ b/index.html
@@ -803,8 +803,7 @@
               <li>	Effective Cash Flow Management. </li>
               <li>	Monitoring budgets and comparing them with actual cost and revenues related to production, marketing and capital.</li>
               <li>  Liaison with business related organizations such as Banks, Insurance Cos and Auditors Etc.</li>
-              <li>	Implementation of ERP in multi-user and multi-currency environment including chart of account review, work-flow design and training of employees.Customized a tree-based optimization algorithm that separates drugs into distinct groups to maximize the concurrent execution of drug
-                    dispenser robots; improved an optimization algorithm that reduced the cycle-time of the automation process by 25%.</li>
+              <li>	Implementation of ERP in multi-user and multi-currency environment including chart of account review, work-flow design and training of employees.</li>
             </ul>
           </div>
           <div class="card-action">
